added options for enforce_genome_version_match to VFP methods and view_pan_phylo().  added option for skip_missing_genomes to view_pan_phylo()

--- a/ui/narrative/methods/view_fxn_profile/display.yaml
+++ b/ui/narrative/methods/view_fxn_profile/display.yaml
@@ -1,7 +1,7 @@
 #
 # define display information
 #
-name: View Function Profile for Genomes - v1.2.2
+name: View Function Profile for Genomes - v1.4.0
 
 tooltip: |
     Examine the general functional distribution or specific functional gene families for a GenomeSet.
@@ -100,6 +100,11 @@ parameters :
             Empty categories
         short-hint : |
             Show categories or families that have no counts.
+    enforce_genome_version_match :
+        ui-name : |
+            Enforce genome version match
+        short-hint : |
+            Require that the genome version used matches the genome version found in the Domain Annotation. Default is to use newest Genome version found in Narrative.
 
 #
 # Configure the display and description of parameters
@@ -112,7 +117,9 @@ parameter-groups :
             Enable and define custom domains to use. The default is to display all annotated domains.
 
 description : |
-    <p>This App constructs a heatmap or numeric table showing protein domains that are present in the genomes of all the organisms contained in a phylogenetic species tree. It is recommended to use genomes annotated with RAST if you want to analyze SEED roles, but genomes annotated with Prokka or other tools are fine for other domain namespaces. You must perform domain annotation on all of the genomes to feed into this viewer, by using the <a href=”https://narrative.kbase.us/#appcatalog/app/DomainAnnotation/annotate_domains_in_a_genome/release”>Annotate Domains in a Genome</a> App or the <a href=”https://narrative.kbase.us/#appcatalog/app/kb_phylogenomics/run_DomainAnnotation_Sets/release”>Annotate Domains in a GenomeSet</a> App on a GenomeSet. If there are any genomes present in the tree that are not annotated with domains, the App will fail. The error message “MISSING DOMAIN ANNOTATION FOR: 43454/34/1” indicates which genome in the Data Panel needs domain annotation. Check that all of the genomes in the tree have corresponding Genome and Domain Annotation objects in your Data Panel. These steps are required to ensure this viewer will function properly.</p>
+    <p>This App constructs a heatmap or numeric table showing protein domains that are present in the genomes of all the organisms contained in a phylogenetic species tree. It is recommended to use genomes annotated with RAST if you want to analyze SEED roles, but genomes annotated with Prokka or other tools are fine for other domain namespaces.</p>
+
+    <p>You must perform domain annotation on all of the genomes to feed into this viewer, by using the <a href=”https://narrative.kbase.us/#appcatalog/app/DomainAnnotation/annotate_domains_in_a_genome/release”>Annotate Domains in a Genome</a> App or the <a href=”https://narrative.kbase.us/#appcatalog/app/kb_phylogenomics/run_DomainAnnotation_Sets/release”>Annotate Domains in a GenomeSet</a> App on a GenomeSet. If there are any genomes present in the Genome Set that are not annotated with domains, the App will fail. The error message “MISSING DOMAIN ANNOTATION FOR: 43454/34/1” indicates which genome in the Data Panel needs domain annotation. Check that all of the genomes in the tree have corresponding Genome and Domain Annotation objects in your Data Panel. These steps are required to ensure this viewer will function properly. Additionally the Domain Annotation objects are linked to the version of the Genome object that was annotated, but it may be that the version of the Genome object has incremented, so the default behavior is to use the newest version of the Genome found in the workspace.</p>
 
     <p>You can use this App to examine the general domain distribution or specific functional gene families for all the genomes in the species tree, sorted according to their position in the tree. Choose a Domain Namespace to view hits for all protein domain terms from COG Functional Categories, Pfam A Clans, TIGRfam Roles, and SEED Roles. Enable and set the Custom Domains parameters to limit the report to a subselection of terms. The output report can be a heatmap to visualize the degree of hits for genes that correspond to motifs associated with protein domains, or a numeric table containing the count of hits. The output report also provides a key for the functional domain terms from each of these databases; terms not associated with any hits will appear with grey background color.</p>
 
