--- a/ui/narrative/methods/view_fxn_profile_phylo/display.yaml
+++ b/ui/narrative/methods/view_fxn_profile_phylo/display.yaml
@@ -99,6 +99,11 @@ parameters :
             Empty categories
         short-hint : |
             Show categories or families that have no counts.
+    display_genome_object_name :
+        ui-name : |
+            Display genome object name
+        short-hint : |
+            In addition to the Scientific Name, include the name of the Genome Object in the function profile report
     skip_missing_genomes :
         ui-name : |
             Skip missing genomes
