--- a/ui/narrative/methods/trim_speciestree_to_genomeset/display.yaml
+++ b/ui/narrative/methods/trim_speciestree_to_genomeset/display.yaml
@@ -1,10 +1,10 @@
 #
 # define display information
 #
-name: View Tree - v1.4.0
+name: Trim SpeciesTree to GenomeSet- v1.4.0
 
 tooltip: |
-    Allows users to view a SpeciesTree object.
+    Allows users to reduce a SpeciesTree to match the genomes in a GenomeSet.
 
 screenshots: []
 
@@ -33,15 +33,30 @@ parameters :
         ui-name : |
             Tree
         short-hint : |
-            The SpeciesTree object to view.
+            The SpeciesTree object to trim.
+    input_genomeSet_ref :
+        ui-name : |
+            GenomeSet
+        short-hint : |
+            The GenomeSet to trim the tree to match.
     desc :
         ui-name : |
             Description
         short-hint : |
             A description of the SpeciesTree which will be added to the title in the tree image.
+    output_tree_name :
+        ui-name : |
+            Output Tree
+        short-hint : |
+            The name of the output Tree object
+    enforce_genome_version_match :
+        ui-name : |
+            Enforce genome version match
+        short-hint : |
+            Require that the genome version between the GenomeSet and the SpeciesTree be the same to retain in output SpeciesTree
 
 description : |
-    <p>Currently KBase supports the creation of gene and Species Trees. This App displays the selected tree as a static image and provides links to download the image in PNG and PDF formats.  It also provides links to download file containing the NEWICK representation of the tree (with identifiers or labels). There is also button (‘View report in separate window’) and a link to open a new web page with just the image of the tree.</p>
+    <p>This App allows the user to trim a Species Tree to just include the Genomes that are found in a GenomeSet.  The trimmed tree is then offered as a static image and provided as links to download the image in PNG and PDF formats.  One can also download a file containing the NEWICK representation of the tree (with identifiers or labels). There is also button (‘View report in separate window’) and a link to open a new web page with just the image of the tree.</p>
 
     <p><strong>Team members who developed &amp; deployed algorithm in KBase:</strong> Dylan Chivian. For questions, please <a href=”http://kbase.us/contact-us/”>contact us</a>.</p>
 
