needed to make NONE option for skeleton set a non-empty string in Build_Microbial_SpeciesTree() input widget

--- a/ui/narrative/methods/build_microbial_speciestree/display.yaml
+++ b/ui/narrative/methods/build_microbial_speciestree/display.yaml
@@ -1,10 +1,10 @@
 #
 # define display information
 #
-name: Build Microbial SpeciesTree - v1.5.1
+name: Build Microbial SpeciesTree - v1.6.0
 
 tooltip: |
-    Build Species Tree for your Microbial Genomes, including Reference Genomes and Tree Skeleton with Phylum Exemplars
+    Build Species Tree for your Microbial Genomes, optionally including Tree Skeleton of Phylum Exemplars
 
 screenshots: []
 
