--- a/ui/narrative/methods/run_DomainAnnotation_Sets/display.yaml
+++ b/ui/narrative/methods/run_DomainAnnotation_Sets/display.yaml
@@ -1,7 +1,7 @@
 #
 # define display information
 #
-name: Annotate Domains in a GenomeSet
+name: Annotate Domains in a GenomeSet - v1.7.1
 
 tooltip: |
     Annotate domains in every Genome within a GenomeSet using protein domains from widely used domain libraries.
