--- a/ui/narrative/methods/trim_genetree_to_genomeset/display.yaml
+++ b/ui/narrative/methods/trim_genetree_to_genomeset/display.yaml
@@ -1,14 +1,14 @@
 #
 # define display information
 #
-name: Trim SpeciesTree to GenomeSet- v1.6.0
+name: Trim GeneTree to GenomeSet- v1.8.0
 
 tooltip: |
-    Allows users to reduce a SpeciesTree to match the genomes in a GenomeSet.
+    Allows users to reduce a GeneTree to match the genomes in a GenomeSet.
 
 screenshots: []
 
-icon: tree-purple.png
+icon: genetree-purple.png
 
 #
 # define a set of similar methods that might be useful to the user
@@ -33,7 +33,7 @@ parameters :
         ui-name : |
             Tree
         short-hint : |
-            The SpeciesTree object to trim.
+            The GeneTree object to trim.
     input_genomeSet_ref :
         ui-name : |
             GenomeSet
@@ -54,9 +54,14 @@ parameters :
             Enforce genome version match
         short-hint : |
             Require that the genome version between the GenomeSet and the SpeciesTree be the same to retain in output SpeciesTree
+    keep_ama_genes :
+        ui-name : |
+            Keep AMA genes
+        short-hint : |
+            Annotated Metagenome Assemblies aren't in GenomeSets, so keep their genes in GeneTree.
 
 description : |
-    <p>This App allows the user to trim a Species Tree to just include the Genomes that are found in a GenomeSet.  The trimmed tree is then offered as a static image and provided as links to download the image in PNG and PDF formats.  One can also download a file containing the NEWICK representation of the tree (with identifiers or labels). There is also button (‘View report in separate window’) and a link to open a new web page with just the image of the tree.</p>
+    <p>This App allows the user to trim a Gene Tree object to just include genes from Genomes that are found in a GenomeSet.  The trimmed tree is saved as a new Gene Tree object and is offered as a static image and provided as links to download the image in PNG and PDF formats.  One can also download a file containing the NEWICK representation of the tree (with identifiers or labels). There is also button (‘View report in separate window’) and a link to open a new web page with just the image of the tree.</p>
 
     <p><strong>Team members who developed &amp; deployed algorithm in KBase:</strong> <a href="https://narrative.kbase.us/#people/dylan">Dylan Chivian</a>. For questions, please <a href=”http://www.kbase.us/support/”>contact us</a>.</p>
 
